RESOLVED FIXED151479
REGRESSION(r189433) Web Inspector: JSContext inspection exceptions should include native call frames by default
https://bugs.webkit.org/show_bug.cgi?id=151479
Summary REGRESSION(r189433) Web Inspector: JSContext inspection exceptions should inc...
Joseph Pecoraro
Reported 2015-11-19 20:59:16 PST
* SUMMARY JSContext inspection exceptions should include native call frames by default. Value was flipped when moving to initializer syntax.
Attachments
[PATCH] Proposed Fix (1.34 KB, patch)
2015-11-19 20:59 PST, Joseph Pecoraro
no flags
Radar WebKit Bug Importer
Comment 1 2015-11-19 20:59:43 PST
Joseph Pecoraro
Comment 2 2015-11-19 20:59:58 PST
Created attachment 265937 [details] [PATCH] Proposed Fix
WebKit Commit Bot
Comment 3 2015-11-19 22:02:14 PST
Comment on attachment 265937 [details] [PATCH] Proposed Fix Clearing flags on attachment: 265937 Committed r192676: <http://trac.webkit.org/changeset/192676>
WebKit Commit Bot
Comment 4 2015-11-19 22:02:18 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.