REGRESSION(r189433) Web Inspector: JSContext inspection exceptions should include native call frames by default https://bugs.webkit.org/show_bug.cgi?id=151479

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-11-19
Reviewed by Brian Burg.

* inspector/JSGlobalObjectInspectorController.h:
Value accidentally got flipped when moving to initializer syntax.

Canonical link: https://commits.webkit.org/169638@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192676 268f45cc-cd09-0410-ab3c-d52691b4dbfc